# Linux_System_Monitor

./: CMakeLists.txt  README.md
include/: process.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
